# youtube-analytics

./: pyproject.toml
helper/: youtube_api_manual.py
homework-2/: main.py
src/: channel.py  playlist.py  video.py
