[tool.poetry]
name = "youtube-analytics"
version = "0.1.0"
description = ""
authors = ["Egor Arhipov <111359850+Maurdihen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
